--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.3.4
 mlxtend==0.18.0
-numpy==1.20.1
+numpy
 pandas==1.2.3
 patsy==0.5.1
 Pillow==8.1.1
