--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ pyparsing==2.4.7
 pytz==2021.1
 pyzmq==20.0.0
 scikit-learn==0.24.1
-scipy==1.6.1
+scipy
 seaborn==0.11.1
 sklearn==0.0
 statsmodels==0.12.2
